--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -945,14 +945,13 @@ textarea.input {
 .product .product-body .product-rating>i {
   position: relative;
   width: 14px;
-  margin-right: -4px;
   background: #FFF;
   color: #E4E7ED;
   z-index: 10;
 }
 
 .product .product-body .product-rating>i.fa-star {
-  color: #ef233c;
+  color: #ab9c9e;
 }
 
 .product .product-body .product-rating:after {
