--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,9 @@
 <app-store></app-store>
 
 <app-product-list></app-product-list>
+***************************************************************
+<app-brand></app-brand>
+*************************************************************
 
 
 
