--- a/src/app/Admin/brand/brand/brand.component.html
+++ b/src/app/Admin/brand/brand/brand.component.html
@@ -1,3 +1,20 @@
+<form #userPost="ngForm" (ngSubmit)="onSubmit(userPost.value)">
+  <div >
+    <label for="Name">brandName</label>
+    <input type="text" name="Name" id="Name" ngModel  >
+
+  </div>
+  <div >
+    <label for="Photo">Photo</label>
+    <input type="text" name="Photo" id="Photo" ngModel>
+
+  </div>
+  <div>
+    <button type="submit">Add Data</button>
+  </div>
+
+</form>
+<br><br>
 <div class="card">
     <div class="card-header card-header-primary">
       <h4 class="card-title ">Simple Table</h4>
