--- a/src/app/NavBar/nav-bar/nav-bar.component.html
+++ b/src/app/NavBar/nav-bar/nav-bar.component.html
@@ -6,13 +6,20 @@
         <div id="responsive-nav">
             <!-- NAV -->
             <ul class="main-nav nav navbar-nav">
-                <li class="active"><a href="#">Home</a></li>
-                <li><a href="#">Hot Deals</a></li>
-                <li><a href="#">Categories</a></li>
-                <li><a href="#">Laptops</a></li>
-                <li><a href="#">Smartphones</a></li>
-                <li><a href="#">Cameras</a></li>
-                <li><a href="#">Accessories</a></li>
+                <li class="active"><a routerLink="/">Home</a></li>
+             
+                <li class="dropdown" *ngFor="let sub of subctWithChild">
+
+                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">{{sub.Name}} <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                       
+                            <li *ngFor="let child of sub.Children">
+                        <a (click)="GoToSubProduct(child.Id)">{{child.Name}}</a>
+                        
+                            </li>
+                        
+                    </ul>
+                </li>
             </ul>
             <!-- /NAV -->
         </div>
