--- a/src/app/heigh-saled-product-list/heigh-saled-product-list.component.html
+++ b/src/app/heigh-saled-product-list/heigh-saled-product-list.component.html
@@ -10,10 +10,7 @@
                     <h3 class="title">Top Salles Product</h3>
                     <div class="section-nav">
                         <ul class="section-tab-nav tab-nav">
-                            <li class="active"><a data-toggle="tab" href="#tab1">Laptops</a></li>
-                            <li><a data-toggle="tab" href="#tab1">Smartphones</a></li>
-                            <li><a data-toggle="tab" href="#tab1">Cameras</a></li>
-                            <li><a data-toggle="tab" href="#tab1">Accessories</a></li>
+                            <li [class.active]="i==0" *ngFor="let brand of brands; let i=index" ><a data-toggle="tab" href="#tab1">{{brand.Name}}</a></li>
                         </ul>
                     </div>
                 </div>
