--- a/src/app/Store/product-list/product-list.component.html
+++ b/src/app/Store/product-list/product-list.component.html
@@ -4,16 +4,18 @@
         <!-- row -->
         <div class="row">
 
+
+            <div class="col-12" *ngIf="products.length == 0">
+                <h3 class="title">No Products here!</h3>
+            </div>
+
             <!-- section title -->
-            <div class="col-md-12">
+            <div class="col-md-12" *ngIf="products.length != 0">
                 <div class="section-title">
                     <h3 class="title">New Products</h3>
                     <div class="section-nav">
                         <ul class="section-tab-nav tab-nav">
-                            <li class="active"><a data-toggle="tab" href="#tab1">Laptops</a></li>
-                            <li><a data-toggle="tab" href="#tab1">Smartphones</a></li>
-                            <li><a data-toggle="tab" href="#tab1">Cameras</a></li>
-                            <li><a data-toggle="tab" href="#tab1">Accessories</a></li>
+                            <li [class.active]="i==0" *ngFor="let brand of brands; let i=index" ><a data-toggle="tab" href="#tab1">{{brand.Name}}</a></li>
                         </ul>
                     </div>
                 </div>
@@ -21,7 +23,7 @@
             <!-- /section title -->
 
             <!-- Products tab & slick -->
-            <div class="col-md-12">
+            <div class="col-md-12" *ngIf="products.length != 0">
                 <div class="row">
                     <div class="products-tabs">
                         <!-- tab -->
