--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -22,14 +22,13 @@
                 <!-- SEARCH BAR -->
                 <div class="col-md-6">
                     <div class="header-search">
-                        <form>
-                            <select class="input-select">
-                                <option value="0">All Categories</option>
-                                <option value="1">Category 01</option>
-                                <option value="1">Category 02</option>
+                        <form #searchForm="ngForm" (ngSubmit)="Search()" novalidate>
+                            <select class="input-select" name="subCat" [(ngModel)]="subId">
+                                <option value="0" selected>All Categories</option>
+                                <option [value]="subcat.Id" *ngFor="let subcat of subCats">{{subcat.Name}}</option>
                             </select>
-                            <input class="input" placeholder="Search here">
-                            <button class="search-btn">Search</button>
+                            <input class="input" placeholder="Search here" name="term" [(ngModel)]="searchTerm" required>
+                            <button class="search-btn" type="submit" >Search</button>
                         </form>
                     </div>
                 </div>
