--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -39,10 +39,10 @@
                     <div class="header-ctn">
                         <!-- Wishlist -->
                         <div>
-                            <a href="#">
+                            <a (click)="GoToProduct(userid)">
                                 <i class="fa fa-heart-o"></i>
                                 <span>Your Wishlist</span>
-                                <div class="qty">2</div>
+                                <div class="qty">{{wishListCount}}</div>
                             </a>
                         </div>
                         <!-- /Wishlist -->
