--- a/src/app/Store/product/product.component.html
+++ b/src/app/Store/product/product.component.html
@@ -20,7 +20,8 @@
                 <i class="fa fa-star" [class.colorRateStar]="GetAvgRating(product.Ratings) > 4.5"></i>
             </div>
             <div class="product-btns">
-                <button class="add-to-wishlist"><i class="fa fa-heart-o"></i><span class="tooltipp">add to wishlist</span></button>
+                <button class="add-to-wishlist" (click)="AddToWishList(product)" [class.disabled]="flagAlreadyAdded"><i [ngClass]=" ClassRed?'fa fa-heart':'fa fa-heart-o'"></i><span class="tooltipp">add to wishlist</span></button>
+            
                 <!-- <button class="add-to-compare"><i class="fa fa-exchange"></i><span class="tooltipp">add to compare</span></button> -->
                 <button (click)="GoToDetails()" class="quick-view"><i class="fa fa-eye"></i><span class="tooltipp">view</span></button>
             </div>
