--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,85 @@
 /* You can add global styles to this file, and also import other style files */
+
+/* Set padding to keep content from hitting the edges */
+.body-content {
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+/* Override the default bootstrap behavior where horizontal description lists 
+   will truncate terms that are too long to fit in the left column 
+*/
+.dl-horizontal dt {
+    white-space: normal;
+}
+
+/* Set width on the form input elements since they're 100% wide by default */
+input,
+select,
+textarea {
+    max-width: 280px;
+}
+
+#imageContainer {
+    width: 200px;
+    height:200px;
+    overflow: hidden;
+    margin-bottom: 1.5rem;
+    border: 1px solid black;
+    position: relative;
+    cursor: pointer;
+}
+
+#imageContainer img {
+    width: 100%;
+    height: 100%;
+}
+
+
+input[type=file] {
+    opacity: 0 !important;
+    position: absolute !important;
+    top: 0 !important;
+    right: 0 !important;
+    bottom: 0 !important;
+    left: 0 !important;
+    width: 100% !important;
+    height: 100% !important;
+    cursor: pointer;
+}
+
+
+
+.card {
+    border: 0;
+    margin-bottom: 30px;
+    margin-top: 30px;
+    border-radius: 6px;
+    color: #333333;
+    background: #fff;
+    width: 100%;
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+}
+
+
+.cart-close-btn {
+    position: absolute;
+    top: 1rem;
+    right: 2rem;
+}
+
+
+.disabled {
+    pointer-events: none;
+    cursor: default;
+    opacity: 0.6;
+}
+
+.rounded-circle {
+    border-radius: 50% !important;
+}
+
+
+.h-100 {
+    height: 100% !important;
+}
