--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,5 @@
 <!-- HEADER -->
 <header>
-
     <app-user-header></app-user-header>
 
     <!-- MAIN HEADER -->
@@ -76,4 +75,5 @@
     </div>
     <!-- /MAIN HEADER -->
 </header>
+<app-loader></app-loader>
 <!-- /HEADER -->
