--- a/src/app/header/cart/cart.component.html
+++ b/src/app/header/cart/cart.component.html
@@ -8,6 +8,6 @@
     </div>
     <div class="cart-btns">
         <a href="#">View Cart</a>
-        <a href="#">Checkout  <i class="fa fa-arrow-circle-right"></i></a>
+        <a routerLink="/CheckOut">Checkout  <i class="fa fa-arrow-circle-right"></i></a>
     </div>
 </div>
