--- a/src/app/Admin/MainCategory/index/index.component.html
+++ b/src/app/Admin/MainCategory/index/index.component.html
@@ -1,1 +1,47 @@
-<p>index works!</p>
+<div class="container">
+    <br>  <div>
+      <a class="btn btn-success" routerLink="/MainCategory/Add">Add New MainCategory</a>
+    </div><br>
+    <div class="card">
+      
+        <div class="card-body">
+        
+          <div class="table-responsive">
+            <table class="table ">
+              <thead class=" text-primary">
+                <th>
+                  ID
+                </th>
+                <th>
+                  Name
+                </th>
+                <th>
+                  Photo
+                </th>
+                <th>
+                  Edit
+                </th>
+                <th>
+                  Delete
+                </th>
+             
+              </thead>
+              <tbody>
+                  <tr *ngFor="let cat of main_Cat">
+                      <td>{{cat.Id}}</td>
+                      <td>{{cat.Name}}</td>
+                      <td><img src="http://localhost:9602/Content/Imgs/Main_Categories/{{cat.Photo}}" width="100px" height="100px"></td>
+                      <td>
+                        <a class="btn btn-primary" routerLink="#" >Edit Brand</a>
+                      </td>
+                      <td>
+                        
+                      </td>
+                  </tr>
+                
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+  </div>
