--- a/src/styles.scss
+++ b/src/styles.scss
@@ -36,17 +36,17 @@ textarea {
 }
 
 
-input[type=file] {
-    opacity: 0 !important;
-    position: absolute !important;
-    top: 0 !important;
-    right: 0 !important;
-    bottom: 0 !important;
-    left: 0 !important;
-    width: 100% !important;
-    height: 100% !important;
-    cursor: pointer;
-}
+// input[type=file] {
+//     opacity: 0 !important;
+//     position: absolute !important;
+//     top: 0 !important;
+//     right: 0 !important;
+//     bottom: 0 !important;
+//     left: 0 !important;
+//     width: 100% !important;
+//     height: 100% !important;
+//     cursor: pointer;
+// }
 
 
 
