--- a/src/app/Admin/brand/add-brand/add-brand.component.html
+++ b/src/app/Admin/brand/add-brand/add-brand.component.html
@@ -11,6 +11,7 @@
             <label>brand Name</label>
             <input name="Name" required type="text" ngModel class="form-control" />
         </div>
-        <input type="submit" class="btn btn-primary" value="Add Brand" />
+        <input type="submit" class="btn btn-primary" value="Add Brand" /> 
+        <button class="btn btn-danger" style="margin-left: 2rem;" routerLink="/admin/brand">Back</button>
     </form>
 </div>
