--- a/src/app/Store/store/store.component.html
+++ b/src/app/Store/store/store.component.html
@@ -12,7 +12,7 @@
                     </div>
                     <div class="shop-body">
                         <h3>{{store.FirstName}} {{store.LastName}}<br>Store</h3>
-                        <a routerLink="/productList/{{store.ID}}" class="cta-btn">Shop now <i class="fa fa-arrow-circle-right"></i></a>
+                        <a routerLink="/homePage/productList/{{store.ID}}" class="cta-btn">Shop now <i class="fa fa-arrow-circle-right"></i></a>
                     </div>
                 </div>
             </div>
