--- a/src/app/Admin/brand/edit-brand/edit-brand.component.html
+++ b/src/app/Admin/brand/edit-brand/edit-brand.component.html
@@ -1,27 +1,23 @@
 
 <div class="container">
     <h2>Edit Brand</h2>
-    <form #userPost="ngForm"  >
+    <form #brandForm="ngForm" (ngSubmit)="UpdateBrand()" >
 
         
-            <div class="form-group">
-                <label>brand Name</label>
-                <input name="Name" required type="text"  class="form-control" formControlName="Name" />
+            <div class="form-group" >
+                <label>brand Name</label> 
+                <input name="Name" required type="text" [(ngModel)]="brand.Name" class="form-control" />
 
             </div>
             <br>
             <div id="imageContainer" class="rounded-circle">
-                <input type="text" name="Photo" id="Photo" formControlName="Photo" accept="image/png, image/jpeg, image/jpg"
+                <input type="file" name="Photo" id="Photo" (change)="fileHandle($event.target)" [(ngModel)]="brand.imageFile" accept="image/png, image/jpeg, image/jpg"
                     class="form-control" />
-
+                <img src="{{ImageUrl}}" id="img" class="h-100 w-100" />
             </div>
         
         <br>
-        <input type="submit" class="btn btn-primary" value="Add Brand">
-
-
-
+        <input type="submit" class="btn btn-primary" value="Edit Brand">
+        <button class="btn btn-danger" style="margin-left: 2rem;" routerLink="/admin/brand">Back</button>
     </form>
-
-
 </div>
