--- a/src/app/Admin/admin/admin.component.html
+++ b/src/app/Admin/admin/admin.component.html
@@ -16,8 +16,8 @@
         <ul class="nav navbar-nav">
           <li class="active"><a routerLink="/admin/brand">Brand <span class="sr-only">(current)</span></a></li>
           <li><a routerLink="/admin/MainCategory">Main Category</a></li>
-          <li><a routerLink="/admin/MainCategory">Sub Category</a></li>
-          <li><a routerLink="/admin/MainCategory">Sub Category</a></li>
+          <li><a routerLink="/admin/subcategory">Sub Category</a></li>
+          <li><a routerLink="/admin/MainCategory">Products</a></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
             <ul class="dropdown-menu">
