--- a/src/app/Admin/subcategory/add-subcategory/add-subcategory.component.html
+++ b/src/app/Admin/subcategory/add-subcategory/add-subcategory.component.html
@@ -31,7 +31,7 @@
           </div>
           <br>
           <input type="submit"class="btn btn-primary" value="Add Subcategory">
-  
+          <button class="btn btn-danger" style="margin-left: 2rem;" routerLink="/admin/subcategory">Back</button>
   
         
       </form>
