--- a/src/app/Admin/MainCategory/add-main-category/add-main-category.component.html
+++ b/src/app/Admin/MainCategory/add-main-category/add-main-category.component.html
@@ -1,1 +1,19 @@
-<p>add-main-category works!</p>
+<div class="container">
+    <h2>Add New MainCategory</h2>
+    <br>
+    <form #main_CatForm="ngForm" novalidate (ngSubmit)="onSubmit(main_CatForm.value)" id="imageForm">
+        <label>MainCategory Photo</label>
+        <div id="imageContainer">
+            <input type="file" name="imageFile" id="imageFile" ngModel accept="image/png, image/jpeg, image/jpg"
+                class="form-control" (change)="UploadImage()" />
+            <img src="http://localhost:9602/Content/Imgs/default.jpg" id="img" class="h-100 w-100" />
+        </div>
+
+        <div class="form-group">
+            <label>MainCategory Name</label>
+            <input name="Name" required type="text" ngModel class="form-control" />
+        </div>
+        <input type="submit" class="btn btn-primary" value="Add MainCategory" /> 
+        <button class="btn btn-danger" style="margin-left: 2rem;" routerLink="/admin/MainCategory">Back</button>
+    </form>
+</div>
