--- a/src/app/check-out/check-out.component.html
+++ b/src/app/check-out/check-out.component.html
@@ -5,13 +5,13 @@
 
         <div class="form-group">
             <label>Total Price</label>
-            <input name="Total_Price" id="Total_Price" readonly required  type="text" value="{{ total | currency:'$' }}"  ngModel  class="form-control" />
+            <input name="Total_Price" id="Total_Price" readonly required  type="text" [(ngModel)]="total"   class="form-control" />
             
         </div>
         <div class="form-group">
             <div class="payment-method">
                 <div class="input-radio">
-                    <input type="radio" name="payment" id="payment-1" value="1" checked>
+                    <input type="radio" name="payment" id="payment-1" ngModel value="1" checked>
                     <label for="payment-1">
                         <span></span>
                         Cash
@@ -19,7 +19,7 @@
         
                 </div>
                 <div class="input-radio">
-                    <input type="radio" name="payment" id="payment-2" value="0">
+                    <input type="radio" name="payment" id="payment-2" ngModel value="0">
                     <label for="payment-2">
                         <span></span>
                         Visa
@@ -27,7 +27,7 @@
         
                 </div>
                 <div class="input-radio">
-                    <input type="radio" name="payment" id="payment-3" value="2">
+                    <input type="radio" name="payment" id="payment-3" ngModel value="2">
                     <label for="payment-3">
                         <span></span>
                         PayPal
@@ -39,7 +39,7 @@
         </div>
         <div class="form-group">
             <label>Address</label>
-            <input type="text" name="Address" id="Address" ngModel placeholder="Enter Address" required class="form-control" />
+            <input type="text" name="Address" id="Address" ngModel  placeholder="Enter Address" required class="form-control" />
         </div>
         <input type="submit"class="btn btn-primary" value="CheckOut">
       
